// Copyright 2026 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.auth;
option go_package = "github.com/bucketeer-io/bucketeer/v2/proto/auth";

message PasswordAuthOption {
  bool enabled = 1;
  bool required = 2;
}

message GoogleOidcOption {
  bool enabled = 1;
  bool required = 2;
  string display_name = 3;  // e.g., "Sign in with Google"
}

message CompanyOidcOption {
  bool enabled = 1;
  bool required = 2;
  string issuer = 3;
  string client_id = 4;
  string client_secret = 5;  // Never returned to client
  string redirect_uri = 6;
  repeated string scopes = 7;
  string display_name = 8;
}

message AuthPolicy {
  PasswordAuthOption password = 1;
  GoogleOidcOption google_oidc = 2;
  CompanyOidcOption company_oidc = 3;
}

message DomainAuthPolicy {
  string domain = 1;
  AuthPolicy auth_policy = 2;
  bool enabled = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

// Client-safe version (no secrets)
message DomainAuthOptions {
  string domain = 1;
  bool password_enabled = 2;
  bool google_oidc_enabled = 3;
  string google_oidc_display_name = 4;  // e.g., "Sign in with Google"
  bool company_oidc_enabled = 5;
  string company_oidc_display_name = 6;
  string company_oidc_auth_url =
      7;  // Pre-built auth URL (deprecated, use GetCompanyOidcAuthURL)
  bool oidc_required = 8;  // If true, only OIDC allowed (no password)
}
